Switched to Android classes in rt.