@@ -1,13 +1,13 @@
-/* 
+/*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
  * The ASF licenses this file to You under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
- * 
+ *
  *     http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -21,259 +21,97 @@ import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.io.ObjectStreamField;
+import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.GregorianCalendar;
+import java.util.List;
 import java.util.Locale;
-import java.util.Vector;
-
-import org.apache.harmony.text.internal.nls.Messages;
+import java.util.SimpleTimeZone;
+import java.util.TimeZone;
+import libcore.icu.LocaleData;
+import libcore.icu.TimeZones;
 
 /**
  * A concrete class for formatting and parsing dates in a locale-sensitive
- * manner. It allows for formatting (date to text), parsing (text to date) and
- * normalization.
- * <p>
- * {@code SimpleDateFormat} allows you to start by choosing any user-defined
- * patterns for date-time formatting. However, you are encouraged to create a
- * date-time formatter with either {@code getTimeInstance}, {@code
- * getDateInstance}, or {@code getDateTimeInstance} in {@code DateFormat}. Each
- * of these class methods can return a date/time formatter initialized with a
- * default format pattern. You may modify the format pattern using the {@code
- * applyPattern} methods as desired. For more information on using these
- * methods, see {@link DateFormat}.
- * <h4>Time Format Syntax</h4>
- * <p>
- * To specify the time format, use a <em>time pattern</em> string. In this
- * pattern, all ASCII letters are reserved as pattern letters, which are defined
- * as follows:
- * <table border=0 cellspacing=3 cellpadding=0>
- * <tr bgcolor="#ccccff">
- * <th>Symbol</th>
- * <th>Meaning</th>
- * <th>Presentation</th>
- * <th>Example</th>
- * </tr>
- * <tr valign=top>
- * <td>G</td>
- * <td>era designator</td>
- * <td>(Text)</td>
- * <td>AD</td>
- * </tr>
- * <tr valign=top bgcolor="#eeeeff">
- * <td>y</td>
- * <td>year</td>
- * <td>(Number)</td>
- * <td>1996</td>
- * </tr>
- * <tr valign=top>
- * <td>M</td>
- * <td>month in year</td>
- * <td>(Text &amp; Number)</td>
- * <td>July &amp; 07</td>
- * </tr>
- * <tr valign=top bgcolor="#eeeeff">
- * <td>d</td>
- * <td>day in month</td>
- * <td>(Number)</td>
- * <td>10</td>
- * </tr>
- * <tr valign=top>
- * <td>h</td>
- * <td>hour in am/pm (1&tilde;12)</td>
- * <td>(Number)</td>
- * <td>12</td>
- * </tr>
- * <tr valign=top bgcolor="#eeeeff">
- * <td>H</td>
- * <td>hour in day (0&tilde;23)</td>
- * <td>(Number)</td>
- * <td>0</td>
- * </tr>
- * <tr valign=top>
- * <td>m</td>
- * <td>minute in hour</td>
- * <td>(Number)</td>
- * <td>30</td>
- * </tr>
- * <tr valign=top bgcolor="#eeeeff">
- * <td>s</td>
- * <td>second in minute</td>
- * <td>(Number)</td>
- * <td>55</td>
- * </tr>
- * <tr valign=top>
- * <td>S</td>
- * <td>fractional second</td>
- * <td>(Number)</td>
- * <td>978</td>
- * </tr>
- * <tr valign=top bgcolor="#eeeeff">
- * <td>E</td>
- * <td>day of week</td>
- * <td>(Text)</td>
- * <td>Tuesday</td>
- * </tr>
- * <tr valign=top bgcolor="#eeeeff">
- * <td>D</td>
- * <td>day in year</td>
- * <td>(Number)</td>
- * <td>189</td>
- * </tr>
- * <tr valign=top>
- * <td>F</td>
- * <td>day of week in month</td>
- * <td>(Number)</td>
- * <td>2 (2nd Wed in July)</td>
- * </tr>
- * <tr valign=top bgcolor="#eeeeff">
- * <td>w</td>
- * <td>week in year</td>
- * <td>(Number)</td>
- * <td>27</td>
- * </tr>
- * <tr valign=top>
- * <td>W</td>
- * <td>week in month</td>
- * <td>(Number)</td>
- * <td>2</td>
- * </tr>
- * <tr valign=top bgcolor="#eeeeff">
- * <td>a</td>
- * <td>am/pm marker</td>
- * <td>(Text)</td>
- * <td>PM</td>
- * </tr>
- * <tr valign=top>
- * <td>k</td>
- * <td>hour in day (1&tilde;24)</td>
- * <td>(Number)</td>
- * <td>24</td>
- * </tr>
- * <tr valign=top bgcolor="#eeeeff">
- * <td>K</td>
- * <td>hour in am/pm (0&tilde;11)</td>
- * <td>(Number)</td>
- * <td>0</td>
- * </tr>
- * <tr valign=top>
- * <td>z</td>
- * <td>time zone</td>
- * <td>(Text)</td>
- * <td>Pacific Standard Time</td>
- * </tr>
- * <tr valign=top bgcolor="#eeeeff">
- * <td>Z</td>
- * <td>time zone (RFC 822)</td>
- * <td>(Number)</td>
- * <td>-0800</td>
- * </tr>
- * <tr valign=top>
- * <td>v</td>
- * <td>time zone (generic)</td>
- * <td>(Text)</td>
- * <td>Pacific Time</td>
- * </tr>
- * <tr valign=top bgcolor="#eeeeff">
- * <td>V</td>
- * <td>time zone (location)</td>
- * <td>(Text)</td>
- * <td>United States (Los Angeles)</td>
- * </tr>
- * <tr valign=top>
- * <td>'</td>
- * <td>escape for text</td>
- * <td>(Delimiter)</td>
- * <td>'Date='</td>
- * </tr>
- * <tr valign=top bgcolor="#eeeeff">
- * <td>''</td>
- * <td>single quote</td>
- * <td>(Literal)</td>
- * <td>'o''clock'</td>
- * </tr>
+ * manner. Formatting turns a {@link Date} into a {@link String}, and parsing turns a
+ * {@code String} into a {@code Date}.
+ *
+ * <h4>Time Pattern Syntax</h4>
+ * <p>You can supply a pattern describing what strings are produced/accepted, but almost all
+ * callers should use {@link DateFormat#getDateInstance}, {@link DateFormat#getDateTimeInstance},
+ * or {@link DateFormat#getTimeInstance} to get a ready-made instance suitable for the user's
+ * locale.
+ *
+ * <p>The main reason you'd create an instance this class directly is because you need to
+ * format/parse a specific machine-readable format, in which case you almost certainly want
+ * to explicitly ask for {@link Locale#US} to ensure that you get ASCII digits (rather than,
+ * say, Arabic digits).
+ * (See "<a href="../util/Locale.html#default_locale">Be wary of the default locale</a>".)
+ * The most useful non-localized pattern is {@code "yyyy-MM-dd HH:mm:ss.SSSZ"}, which corresponds
+ * to the ISO 8601 international standard date format.
+ *
+ * <p>To specify the time format, use a <i>time pattern</i> string. In this
+ * string, any character from {@code 'A'} to {@code 'Z'} or {@code 'a'} to {@code 'z'} is
+ * treated specially. All other characters are passed through verbatim. The interpretation of each
+ * of the ASCII letters is given in the table below. ASCII letters not appearing in the table are
+ * reserved for future use, and it is an error to attempt to use them.
+ *
+ * <p><table BORDER="1" WIDTH="100%" CELLPADDING="3" CELLSPACING="0" SUMMARY="">
+ * <tr BGCOLOR="#CCCCFF" CLASS="TableHeadingColor">
+ *      <td><B>Symbol</B></td> <td><B>Meaning</B></td> <td><B>Presentation</B></td> <td><B>Example</B></td> </tr>
+ * <tr> <td>{@code D}</td> <td>day in year</td>             <td>(Number)</td>      <td>189</td> </tr>
+ * <tr> <td>{@code E}</td> <td>day of week</td>             <td>(Text)</td>        <td>Tuesday</td> </tr>
+ * <tr> <td>{@code F}</td> <td>day of week in month</td>    <td>(Number)</td>      <td>2 <i>(2nd Wed in July)</i></td> </tr>
+ * <tr> <td>{@code G}</td> <td>era designator</td>          <td>(Text)</td>        <td>AD</td> </tr>
+ * <tr> <td>{@code H}</td> <td>hour in day (0-23)</td>      <td>(Number)</td>      <td>0</td> </tr>
+ * <tr> <td>{@code K}</td> <td>hour in am/pm (0-11)</td>    <td>(Number)</td>      <td>0</td> </tr>
+ * <tr> <td>{@code L}</td> <td>stand-alone month</td>       <td>(Text/Number)</td> <td>July / 07</td> </tr>
+ * <tr> <td>{@code M}</td> <td>month in year</td>           <td>(Text/Number)</td> <td>July / 07</td> </tr>
+ * <tr> <td>{@code S}</td> <td>fractional seconds</td>      <td>(Number)</td>      <td>978</td> </tr>
+ * <tr> <td>{@code W}</td> <td>week in month</td>           <td>(Number)</td>      <td>2</td> </tr>
+ * <tr> <td>{@code Z}</td> <td>time zone (RFC 822)</td>     <td>(Timezone)</td>    <td>-0800</td> </tr>
+ * <tr> <td>{@code a}</td> <td>am/pm marker</td>            <td>(Text)</td>        <td>PM</td> </tr>
+ * <tr> <td>{@code c}</td> <td>stand-alone day of week</td> <td>(Text/Number)</td> <td>Tuesday / 2</td> </tr>
+ * <tr> <td>{@code d}</td> <td>day in month</td>            <td>(Number)</td>      <td>10</td> </tr>
+ * <tr> <td>{@code h}</td> <td>hour in am/pm (1-12)</td>    <td>(Number)</td>      <td>12</td> </tr>
+ * <tr> <td>{@code k}</td> <td>hour in day (1-24)</td>      <td>(Number)</td>      <td>24</td> </tr>
+ * <tr> <td>{@code m}</td> <td>minute in hour</td>          <td>(Number)</td>      <td>30</td> </tr>
+ * <tr> <td>{@code s}</td> <td>second in minute</td>        <td>(Number)</td>      <td>55</td> </tr>
+ * <tr> <td>{@code w}</td> <td>week in year</td>            <td>(Number)</td>      <td>27</td> </tr>
+ * <tr> <td>{@code y}</td> <td>year</td>                    <td>(Number)</td>      <td>2010</td> </tr>
+ * <tr> <td>{@code z}</td> <td>time zone</td>               <td>(Timezone)</td>    <td>Pacific Standard Time</td> </tr>
+ * <tr> <td>{@code '}</td> <td>escape for text</td>         <td>(Delimiter)</td>   <td>'Date='</td> </tr>
+ * <tr> <td>{@code ''}</td> <td>single quote</td>           <td>(Literal)</td>     <td>'o''clock'</td> </tr>
  * </table>
- * <p>
- * The count of pattern letters determines the format:
- * <p>
- * <strong>(Text)</strong>: 4 or more pattern letters &rarr; use the full form,
- * less than 4 pattern letters &rarr; use a short or abbreviated form if one
- * exists.
- * <p>
- * <strong>(Number)</strong>: the minimum number of digits. Shorter numbers are
- * zero-padded to this amount. Year is handled specially; that is, if the count
- * of 'y' is 2, the year will be truncated to 2 digits. (if "yyyy" produces
- * "1997", "yy" produces "97".) Unlike other fields, fractional seconds are
- * padded on the right with zero.
- * <p>
- * <strong>(Text & Number)</strong>: 3 or over, use text, otherwise use number.
- * <p>
- * Any characters in the pattern that are not in the ranges of ['a'..'z'] and
- * ['A'..'Z'] will be treated as quoted text. For instance, characters like ':',
- * '.', ' ', '#' and '@' will appear in the resulting time text even they are
- * not embraced within single quotes.
- * <p>
- * A pattern containing any invalid pattern letter will result in an exception
- * thrown during formatting or parsing.
- * <h4>Examples Using the US Locale</h4> <blockquote>
- * 
- * <pre>
- * Format Pattern                       Result
- * --------------                       -------
- * "yyyy.MM.dd G 'at' HH:mm:ss vvvv" &rarr;  1996.07.10 AD at 15:08:56 Pacific Time
- * "EEE, MMM d, ''yy"                &rarr;  Wed, July 10, '96
- * "h:mm a"                          &rarr;  12:08 PM
- * "hh 'o''clock' a, zzzz"           &rarr;  12 o'clock PM, Pacific Daylight Time
- * "K:mm a, vvv"                     &rarr;  0:00 PM, PT
- * "yyyyy.MMMMM.dd GGG hh:mm aaa"    &rarr;  01996.July.10 AD 12:08 PM
- * </pre>
- * 
- * </blockquote> <h4>Code Sample:</h4> <blockquote>
- * 
- * <pre>
- * SimpleTimeZone pdt = new SimpleTimeZone(-8 * 60 * 60 * 1000, "PST");
- * pdt.setStartRule(Calendar.APRIL, 1, Calendar.SUNDAY, 2 * 60 * 60 * 1000);
- * pdt.setEndRule(Calendar.OCTOBER, -1, Calendar.SUNDAY, 2 * 60 * 60 * 1000);
- * 
- * // Format the current time.
- * SimpleDateFormat formatter = new SimpleDateFormat(
- *         "yyyy.MM.dd G 'at' hh:mm:ss a zzz");
- * Date currentTime_1 = new Date();
- * String dateString = formatter.format(currentTime_1);
- * 
- * // Parse the previous string back into a Date.
- * ParsePosition pos = new ParsePosition(0);
- * Date currentTime_2 = formatter.parse(dateString, pos);
- * </pre>
- * 
- * </blockquote>
- * <p>
- * In the example, the time value {@code currentTime_2} obtained from parsing
- * will be equal to {@code currentTime_1}. However, they may not be equal if the
- * am/pm marker 'a' is left out from the format pattern while the
- * "hour in am/pm" pattern symbol is used. This information loss can happen when
- * formatting the time in PM.
- * <p>
- * When parsing a date string using the abbreviated year pattern ("yy"), {@code
- * SimpleDateFormat} must interpret the abbreviated year relative to some
- * century. It does this by adjusting dates to be within 80 years before and 20
- * years after the time the {@code SimpleDateFormat} instance is created. For
- * example, using a pattern of "MM/dd/yy" and a {@code SimpleDateFormat}
- * instance created on Jan 1, 1997, the string "01/11/12" would be interpreted
- * as Jan 11, 2012 while the string "05/04/64" would be interpreted as May 4,
- * 1964. During parsing, only strings consisting of exactly two digits, as
- * defined by {@link java.lang.Character#isDigit(char)}, will be parsed into the
- * default century. Any other numeric string, such as a one digit string, a
- * three or more digit string, or a two digit string that isn't all digits (for
- * example, "-1"), is interpreted literally. So "01/02/3" or "01/02/003" are
- * parsed, using the same pattern, as Jan 2, 3 AD. Likewise, "01/02/-3" is
- * parsed as Jan 2, 4 BC.
- * <p>
- * If the year pattern does not have exactly two 'y' characters, the year is
- * interpreted literally, regardless of the number of digits. So using the
- * pattern "MM/dd/yyyy", "01/11/12" parses to Jan 11, 12 A.D.
- * <p>
- * When numeric fields are adjacent directly, with no intervening delimiter
+ *
+ * <p>The number of consecutive copies (the "count") of a pattern character further influences
+ * the format.
+ * <ul>
+ * <li><b>Text</b> if the count is 4 or more, use the full form; otherwise use a short or
+ * abbreviated form if one exists. So {@code zzzz} might give {@code Pacific Standard Time}
+ * whereas {@code z} might give {@code PST}. Note that the count does <i>not</i> specify the
+ * exact width of the field.
+ *
+ * <li><b>Number</b> the count is the minimum number of digits. Shorter values are
+ * zero-padded to this width, longer values overflow this width.
+ *
+ * <p>Years are handled specially: {@code yy} truncates to the last 2 digits, but any
+ * other number of consecutive {@code y}s does not truncate. So where {@code yyyy} or
+ * {@code y} might give {@code 2010}, {@code yy} would give {@code 10}.
+ *
+ * <p>Fractional seconds are also handled specially: they're zero-padded on the
+ * <i>right</i>.
+ *
+ * <li><b>Text/Number</b>: if the count is 3 or more, use text; otherwise use a number.
+ * So {@code MM} might give {@code 07} while {@code MMM} gives {@code July}.
+ * </ul>
+ *
+ * <p>The two pattern characters {@code L} and {@code c} are ICU-compatible extensions, not
+ * available in the RI. These are necessary for correct localization in languages such as Russian
+ * that distinguish between, say, "June" and "June 2010".
+ *
+ * <p>When numeric fields are adjacent directly, with no intervening delimiter
  * characters, they constitute a run of adjacent numeric fields. Such runs are
  * parsed specially. For example, the format "HHmmss" parses the input text
  * "123456" to 12:34:56, parses the input text "12345" to 1:23:45, and fails to
@@ -283,30 +121,100 @@ import org.apache.harmony.text.internal.nls.Messages;
  * parsed again. This is repeated until either the parse succeeds or the
  * leftmost field is one character in length. If the parse still fails at that
  * point, the parse of the run fails.
- * <p>
- * For time zones that have no names, use the strings "GMT+hours:minutes" or
- * "GMT-hours:minutes".
- * <p>
- * The calendar defines the first day of the week, the first week of the year,
- * whether hours are zero based or not (0 vs. 12 or 24) and the time zone. There
- * is one common decimal format to handle all the numbers; the digit count is
- * handled programmatically according to the pattern.
- * <h4>Synchronization</h4> Date formats are not synchronized. It is recommended
- * to create separate format instances for each thread. If multiple threads
- * access a format concurrently, it must be synchronized externally.
- * 
- * @see Calendar
- * @see GregorianCalendar
+ *
+ * <p>See {@link #set2DigitYearStart} for more about handling two-digit years.
+ *
+ * <h4>Sample Code</h4>
+ * <p>If you're formatting for human use, you should use an instance returned from
+ * {@link DateFormat} as described above. This code:
+ * <pre>
+ * DateFormat[] formats = new DateFormat[] {
+ *   DateFormat.getDateInstance(),
+ *   DateFormat.getDateTimeInstance(),
+ *   DateFormat.getTimeInstance(),
+ * };
+ * for (DateFormat df : formats) {
+ *   System.err.println(df.format(new Date(0)));
+ * }
+ * </pre>
+ *
+ * <p>Produces this output when run on an {@code en_US} device in the PDT time zone:
+ * <pre>
+ * Dec 31, 1969
+ * Dec 31, 1969 4:00:00 PM
+ * 4:00:00 PM
+ * </pre>
+ * And will produce similarly appropriate localized human-readable output on any user's system.
+ *
+ * <p>If you're formatting for machine use, consider this code:
+ * <pre>
+ * String[] formats = new String[] {
+ *   "yyyy-MM-dd",
+ *   "yyyy-MM-dd HH:mm",
+ *   "yyyy-MM-dd HH:mmZ",
+ *   "yyyy-MM-dd HH:mm:ss.SSSZ",
+ *   "yyyy-MM-dd'T'HH:mm:ss.SSSZ",
+ * };
+ * for (String format : formats) {
+ *   SimpleDateFormat sdf = new SimpleDateFormat(format, Locale.US);
+ *   System.err.format("%30s %s\n", format, sdf.format(new Date(0)));
+ *   sdf.setTimeZone(TimeZone.getTimeZone("UTC"));
+ *   System.err.format("%30s %s\n", format, sdf.format(new Date(0)));
+ * }
+ * </pre>
+ *
+ * <p>Which produces this output when run in the PDT time zone:
+ * <pre>
+ *                     yyyy-MM-dd 1969-12-31
+ *                     yyyy-MM-dd 1970-01-01
+ *               yyyy-MM-dd HH:mm 1969-12-31 16:00
+ *               yyyy-MM-dd HH:mm 1970-01-01 00:00
+ *              yyyy-MM-dd HH:mmZ 1969-12-31 16:00-0800
+ *              yyyy-MM-dd HH:mmZ 1970-01-01 00:00+0000
+ *       yyyy-MM-dd HH:mm:ss.SSSZ 1969-12-31 16:00:00.000-0800
+ *       yyyy-MM-dd HH:mm:ss.SSSZ 1970-01-01 00:00:00.000+0000
+ *     yyyy-MM-dd'T'HH:mm:ss.SSSZ 1969-12-31T16:00:00.000-0800
+ *     yyyy-MM-dd'T'HH:mm:ss.SSSZ 1970-01-01T00:00:00.000+0000
+ * </pre>
+ *
+ * <p>As this example shows, each {@code SimpleDateFormat} instance has a {@link TimeZone}.
+ * This is because it's called upon to format instances of {@code Date}, which represents an
+ * absolute time in UTC. That is, {@code Date} does not carry time zone information.
+ * By default, {@code SimpleDateFormat} will use the system's default time zone. This is
+ * appropriate for human-readable output (for which, see the previous sample instead), but
+ * generally inappropriate for machine-readable output, where ambiguity is a problem. Note that
+ * in this example, the output that included a time but no time zone cannot be parsed back into
+ * the original {@code Date}. For this
+ * reason it is almost always necessary and desirable to include the timezone in the output.
+ * It may also be desirable to set the formatter's time zone to UTC (to ease comparison, or to
+ * make logs more readable, for example).
+ *
+ * <h4>Synchronization</h4>
+ * {@code SimpleDateFormat} is not thread-safe. Users should create a separate instance for
+ * each thread.
+ *
+ * @see java.util.Calendar
+ * @see java.util.Date
  * @see java.util.TimeZone
- * @see DateFormat
- * @see DateFormatSymbols
- * @see DecimalFormat
+ * @see java.text.DateFormat
  */
 public class SimpleDateFormat extends DateFormat {
 
     private static final long serialVersionUID = 4774881970558875024L;
 
-    private static final String patternChars = "GyMdkHmsSEDFwWahKzYeugAZvcLQqV"; //$NON-NLS-1$
+    // 'L' and 'c' are ICU-compatible extensions for stand-alone month and stand-alone weekday.
+    static final String PATTERN_CHARS = "GyMdkHmsSEDFwWahKzZLc";
+
+    // The index of 'Z' in the PATTERN_CHARS string. This pattern character is supported by the RI,
+    // but has no corresponding public constant.
+    private static final int RFC_822_TIMEZONE_FIELD = 18;
+
+    // The index of 'L' (cf. 'M') in the PATTERN_CHARS string. This is an ICU-compatible extension
+    // necessary for correct localization in various languages (http://b/2633414).
+    private static final int STAND_ALONE_MONTH_FIELD = 19;
+    // The index of 'c' (cf. 'E') in the PATTERN_CHARS string. This is an ICU-compatible extension
+    // necessary for correct localization in various languages (http://b/2633414).
+    private static final int STAND_ALONE_DAY_OF_WEEK_FIELD = 20;
 
     private String pattern;
 
@@ -316,27 +224,23 @@ public class SimpleDateFormat extends DateFormat {
 
     private Date defaultCenturyStart;
 
-    private transient String tzId;
-
-    private transient com.ibm.icu.text.SimpleDateFormat icuFormat;
-
     /**
      * Constructs a new {@code SimpleDateFormat} for formatting and parsing
-     * dates and times in the {@code SHORT} style for the default locale.
+     * dates and times in the {@code SHORT} style for the user's default locale.
+     * See "<a href="../util/Locale.html#default_locale">Be wary of the default locale</a>".
      */
     public SimpleDateFormat() {
         this(Locale.getDefault());
-        icuFormat = new com.ibm.icu.text.SimpleDateFormat();
-        icuFormat.setTimeZone(com.ibm.icu.util.TimeZone.getTimeZone(tzId));
-        pattern = (String)getInternalField("pattern", icuFormat); //$NON-NLS-1$
-        formatData = new DateFormatSymbols(Locale.getDefault());
+        this.pattern = defaultPattern();
+        this.formatData = new DateFormatSymbols(Locale.getDefault());
     }
 
     /**
      * Constructs a new {@code SimpleDateFormat} using the specified
      * non-localized pattern and the {@code DateFormatSymbols} and {@code
-     * Calendar} for the default locale.
-     * 
+     * Calendar} for the user's default locale.
+     * See "<a href="../util/Locale.html#default_locale">Be wary of the default locale</a>".
+     *
      * @param pattern
      *            the pattern.
      * @throws NullPointerException
@@ -348,7 +252,7 @@ public class SimpleDateFormat extends DateFormat {
     public SimpleDateFormat(String pattern) {
         this(pattern, Locale.getDefault());
     }
-    
+
     /**
      * Validates the format character.
      *
@@ -359,11 +263,9 @@ public class SimpleDateFormat extends DateFormat {
      *             when the format character is invalid
      */
     private void validateFormat(char format) {
-        int index = patternChars.indexOf(format);
+        int index = PATTERN_CHARS.indexOf(format);
         if (index == -1) {
-            // text.03=Unknown pattern character - '{0}'
-            throw new IllegalArgumentException(Messages.getString(
-                    "text.03", format)); //$NON-NLS-1$
+            throw new IllegalArgumentException("Unknown pattern character '" + format + "'");
         }
     }
 
@@ -422,16 +324,15 @@ public class SimpleDateFormat extends DateFormat {
         }
 
         if (quote) {
-            // text.04=Unterminated quote {0}
-            throw new IllegalArgumentException(Messages.getString("text.04")); //$NON-NLS-1$
+            throw new IllegalArgumentException("Unterminated quote");
         }
-
     }
-    
+
     /**
      * Constructs a new {@code SimpleDateFormat} using the specified
      * non-localized pattern and {@code DateFormatSymbols} and the {@code
-     * Calendar} for the default locale.
+     * Calendar} for the user's default locale.
+     * See "<a href="../util/Locale.html#default_locale">Be wary of the default locale</a>".
      *
      * @param template
      *            the pattern.
@@ -445,28 +346,15 @@ public class SimpleDateFormat extends DateFormat {
     public SimpleDateFormat(String template, DateFormatSymbols value) {
         this(Locale.getDefault());
         validatePattern(template);
-        icuFormat = new com.ibm.icu.text.SimpleDateFormat(template, Locale.getDefault());
-        icuFormat.setTimeZone(com.ibm.icu.util.TimeZone.getTimeZone(tzId));
         pattern = template;
         formatData = (DateFormatSymbols) value.clone();
     }
 
-    private void copySymbols(DateFormatSymbols value, com.ibm.icu.text.DateFormatSymbols icuSymbols) {
-        icuSymbols.setAmPmStrings(value.getAmPmStrings());
-        icuSymbols.setEras(value.getEras());
-        icuSymbols.setLocalPatternChars(value.getLocalPatternChars());
-        icuSymbols.setMonths(value.getMonths());
-        icuSymbols.setShortMonths(value.getShortMonths());
-        icuSymbols.setShortWeekdays(value.getShortWeekdays());
-        icuSymbols.setWeekdays(value.getWeekdays());
-        icuSymbols.setZoneStrings(value.getZoneStrings());
-    }
-    
     /**
      * Constructs a new {@code SimpleDateFormat} using the specified
      * non-localized pattern and the {@code DateFormatSymbols} and {@code
      * Calendar} for the specified locale.
-     * 
+     *
      * @param template
      *            the pattern.
      * @param locale
@@ -479,27 +367,16 @@ public class SimpleDateFormat extends DateFormat {
     public SimpleDateFormat(String template, Locale locale) {
         this(locale);
         validatePattern(template);
-        icuFormat = new com.ibm.icu.text.SimpleDateFormat(template, locale);
-        icuFormat.setTimeZone(com.ibm.icu.util.TimeZone.getTimeZone(tzId));
         pattern = template;
-        formatData = new DateFormatSymbols(locale, icuFormat.getDateFormatSymbols());
-    }
-
-    SimpleDateFormat(Locale locale, com.ibm.icu.text.SimpleDateFormat icuFormat){
-        this(locale);
-        this.icuFormat = icuFormat;
-        this.icuFormat.setTimeZone(com.ibm.icu.util.TimeZone.getTimeZone(tzId));
-        pattern = (String)Format.getInternalField("pattern", icuFormat); //$NON-NLS-1$
         formatData = new DateFormatSymbols(locale);
     }
-    
+
     private SimpleDateFormat(Locale locale) {
         numberFormat = NumberFormat.getInstance(locale);
         numberFormat.setParseIntegerOnly(true);
         numberFormat.setGroupingUsed(false);
         calendar = new GregorianCalendar(locale);
         calendar.add(Calendar.YEAR, -80);
-        tzId = calendar.getTimeZone().getID();
         creationYear = calendar.get(Calendar.YEAR);
         defaultCenturyStart = calendar.getTime();
     }
@@ -507,19 +384,18 @@ public class SimpleDateFormat extends DateFormat {
     /**
      * Changes the pattern of this simple date format to the specified pattern
      * which uses localized pattern characters.
-     * 
+     *
      * @param template
      *            the localized pattern.
      */
     public void applyLocalizedPattern(String template) {
-        icuFormat.applyLocalizedPattern(template);
-        pattern = icuFormat.toPattern();
+        pattern = convertPattern(template, formatData.getLocalPatternChars(), PATTERN_CHARS, true);
     }
 
     /**
      * Changes the pattern of this simple date format to the specified pattern
      * which uses non-localized pattern characters.
-     * 
+     *
      * @param template
      *            the non-localized pattern.
      * @throws NullPointerException
@@ -529,50 +405,13 @@ public class SimpleDateFormat extends DateFormat {
      */
     public void applyPattern(String template) {
         validatePattern(template);
-        /*
-         * ICU spec explicitly mentions that "ICU interprets a single 'y'
-         * differently than Java." We need to do a trick here to follow Java
-         * spec.
-         */
-        String templateForICU = patternForICU(template);
-        icuFormat.applyPattern(templateForICU);
         pattern = template;
-    }
-
-    /**
-     * Converts the Java-spec pattern into an equivalent pattern used by ICU.
-     * 
-     * @param p
-     *            the Java-spec style pattern.
-     * @return the ICU-style pattern.
-     */
-    @SuppressWarnings("nls")
-    private String patternForICU(String p) {
-        String[] subPatterns = p.split("'");
-        boolean quote = false;
-        boolean first = true;
-        StringBuilder result = new StringBuilder();
-        for (String subPattern : subPatterns) {
-            if (!quote) {
-                // replace 'y' with 'yy' for ICU to follow Java spec
-                result.append((first ? "" : "'")
-                        + subPattern.replaceAll("(?<!y)y(?!y)", "yy"));
-                first = false;
-            } else {
-                result.append("'" + subPattern);
-            }
-            quote = !quote;
-        }
-        if (p.endsWith("'")) {
-            result.append("'");
-        }
-        return result.toString();
     }
 
     /**
      * Returns a new {@code SimpleDateFormat} with the same pattern and
      * properties as this simple date format.
-     * 
+     *
      * @return a shallow copy of this simple date format.
      * @see java.lang.Cloneable
      */
@@ -581,8 +420,12 @@ public class SimpleDateFormat extends DateFormat {
         SimpleDateFormat clone = (SimpleDateFormat) super.clone();
         clone.formatData = (DateFormatSymbols) formatData.clone();
         clone.defaultCenturyStart = new Date(defaultCenturyStart.getTime());
-        clone.tzId = tzId;
         return clone;
+    }
+
+    private static String defaultPattern() {
+        LocaleData localeData = LocaleData.get(Locale.getDefault());
+        return localeData.getDateFormat(SHORT) + " " + localeData.getTimeFormat(SHORT);
     }
 
     /**
@@ -590,7 +433,7 @@ public class SimpleDateFormat extends DateFormat {
      * if they are equal. In order to be equal, {@code object} must be an
      * instance of {@code SimpleDateFormat} and have the same {@code DateFormat}
      * properties, pattern, {@code DateFormatSymbols} and creation year.
-     * 
+     *
      * @param object
      *            the object to compare with this object.
      * @return {@code true} if the specified object is equal to this simple date
@@ -614,7 +457,7 @@ public class SimpleDateFormat extends DateFormat {
      * Formats the specified object using the rules of this simple date format
      * and returns an {@code AttributedCharacterIterator} with the formatted
      * date and attributes.
-     * 
+     *
      * @param object
      *            the object to format.
      * @return an {@code AttributedCharacterIterator} with the formatted date
@@ -634,16 +477,15 @@ public class SimpleDateFormat extends DateFormat {
             return formatToCharacterIteratorImpl((Date) object);
         }
         if (object instanceof Number) {
-            return formatToCharacterIteratorImpl(new Date(((Number) object)
-                    .longValue()));
+            return formatToCharacterIteratorImpl(new Date(((Number) object).longValue()));
         }
         throw new IllegalArgumentException();
-        
+
     }
-    
+
     private AttributedCharacterIterator formatToCharacterIteratorImpl(Date date) {
         StringBuffer buffer = new StringBuffer();
-        Vector<FieldPosition> fields = new Vector<FieldPosition>();
+        ArrayList<FieldPosition> fields = new ArrayList<FieldPosition>();
 
         // format the date, and find fields
         formatImpl(date, buffer, null, fields);
@@ -652,11 +494,9 @@ public class SimpleDateFormat extends DateFormat {
         AttributedString as = new AttributedString(buffer.toString());
 
         // add DateFormat field attributes to the AttributedString
-        for (int i = 0; i < fields.size(); i++) {
-            FieldPosition pos = fields.elementAt(i);
+        for (FieldPosition pos : fields) {
             Format.Field attribute = pos.getFieldAttribute();
-            as.addAttribute(attribute, attribute, pos.getBeginIndex(), pos
-                    .getEndIndex());
+            as.addAttribute(attribute, attribute, pos.getBeginIndex(), pos.getEndIndex());
         }
 
         // return the CharacterIterator from AttributedString
@@ -670,10 +510,10 @@ public class SimpleDateFormat extends DateFormat {
      * specified by this FieldPosition is formatted, set the begin and end index
      * of the formatted field in the FieldPosition.
      * <p>
-     * If the Vector {@code fields} is not null, find fields of this
+     * If the list {@code fields} is not null, find fields of this
      * date, set FieldPositions with these fields, and add them to the fields
      * vector.
-     * 
+     *
      * @param date
      *            Date to Format
      * @param buffer
@@ -682,14 +522,14 @@ public class SimpleDateFormat extends DateFormat {
      *            FieldPosition to set begin and end index of the field
      *            specified, if it is part of the format for this date
      * @param fields
-     *            Vector used to store the FieldPositions for each field in this
+     *            list used to store the FieldPositions for each field in this
      *            date
      * @return the formatted Date
      * @throws IllegalArgumentException
      *            if the object cannot be formatted by this Format.
      */
     private StringBuffer formatImpl(Date date, StringBuffer buffer,
-            FieldPosition field, Vector<FieldPosition> fields) {
+            FieldPosition field, List<FieldPosition> fields) {
 
         boolean quote = false;
         int next, last = -1, count = 0;
@@ -740,15 +580,13 @@ public class SimpleDateFormat extends DateFormat {
         }
         return buffer;
     }
-    
+
     private void append(StringBuffer buffer, FieldPosition position,
-            Vector<FieldPosition> fields, char format, int count) {
+            List<FieldPosition> fields, char format, int count) {
         int field = -1;
-        int index = patternChars.indexOf(format);
+        int index = PATTERN_CHARS.indexOf(format);
         if (index == -1) {
-            // text.03=Unknown pattern character - '{0}'
-            throw new IllegalArgumentException(Messages.getString(
-                    "text.03", format)); //$NON-NLS-1$
+            throw new IllegalArgumentException("Unknown pattern character '" + format + "'");
         }
 
         int beginPosition = buffer.length();
@@ -761,22 +599,24 @@ public class SimpleDateFormat extends DateFormat {
             case YEAR_FIELD:
                 dateFormatField = Field.YEAR;
                 int year = calendar.get(Calendar.YEAR);
-                if (count < 4) {
+                /*
+                 * For 'y' and 'yyy', we're consistent with Unicode and previous releases
+                 * of Android. But this means we're inconsistent with the RI.
+                 *     http://unicode.org/reports/tr35/
+                 */
+                if (count == 2) {
                     appendNumber(buffer, 2, year % 100);
                 } else {
                     appendNumber(buffer, count, year);
                 }
                 break;
-            case MONTH_FIELD:
+            case STAND_ALONE_MONTH_FIELD: // L
                 dateFormatField = Field.MONTH;
-                int month = calendar.get(Calendar.MONTH);
-                if (count <= 2) {
-                    appendNumber(buffer, count, month + 1);
-                } else if (count == 3) {
-                    buffer.append(formatData.shortMonths[month]);
-                } else {
-                    buffer.append(formatData.months[month]);
-                }
+                appendMonth(buffer, count, formatData.longStandAloneMonths, formatData.shortStandAloneMonths);
+                break;
+            case MONTH_FIELD: // M
+                dateFormatField = Field.MONTH;
+                appendMonth(buffer, count, formatData.months, formatData.shortMonths);
                 break;
             case DATE_FIELD:
                 dateFormatField = Field.DAY_OF_MONTH;
@@ -804,14 +644,13 @@ public class SimpleDateFormat extends DateFormat {
                 int value = calendar.get(Calendar.MILLISECOND);
                 appendNumber(buffer, count, value);
                 break;
+            case STAND_ALONE_DAY_OF_WEEK_FIELD:
+                dateFormatField = Field.DAY_OF_WEEK;
+                appendDayOfWeek(buffer, count, formatData.longStandAloneWeekdays, formatData.shortStandAloneWeekdays);
+                break;
             case DAY_OF_WEEK_FIELD:
                 dateFormatField = Field.DAY_OF_WEEK;
-                int day = calendar.get(Calendar.DAY_OF_WEEK);
-                if (count < 4) {
-                    buffer.append(formatData.shortWeekdays[day]);
-                } else {
-                    buffer.append(formatData.weekdays[day]);
-                }
+                appendDayOfWeek(buffer, count, formatData.weekdays, formatData.shortWeekdays);
                 break;
             case DAY_OF_YEAR_FIELD:
                 dateFormatField = Field.DAY_OF_YEAR;
@@ -846,9 +685,9 @@ public class SimpleDateFormat extends DateFormat {
                 dateFormatField = Field.TIME_ZONE;
                 appendTimeZone(buffer, count, true);
                 break;
-            case com.ibm.icu.text.DateFormat.TIMEZONE_RFC_FIELD: // Z
+            case RFC_822_TIMEZONE_FIELD: // Z
                 dateFormatField = Field.TIME_ZONE;
-                appendTimeZone(buffer, count, false);
+                appendNumericTimeZone(buffer, false);
                 break;
         }
         if (field != -1) {
@@ -870,64 +709,91 @@ public class SimpleDateFormat extends DateFormat {
             }
         }
     }
-    
-    private void appendTimeZone(StringBuffer buffer, int count,
-            boolean generalTimezone) {
-        // cannot call TimeZone.getDisplayName() because it would not use
-        // the DateFormatSymbols of this SimpleDateFormat
 
-        if (generalTimezone) {
-            String id = calendar.getTimeZone().getID();
-            String[][] zones = formatData.getZoneStrings();
-            String[] zone = null;
-            for (String[] element : zones) {
-                if (id.equals(element[0])) {
-                    zone = element;
-                    break;
-                }
-            }
-            if (zone == null) {
-                int offset = calendar.get(Calendar.ZONE_OFFSET)
-                        + calendar.get(Calendar.DST_OFFSET);
-                char sign = '+';
-                if (offset < 0) {
-                    sign = '-';
-                    offset = -offset;
-                }
-                buffer.append("GMT"); //$NON-NLS-1$
-                buffer.append(sign);
-                appendNumber(buffer, 2, offset / 3600000);
-                buffer.append(':');
-                appendNumber(buffer, 2, (offset % 3600000) / 60000);
-            } else {
-                int daylight = calendar.get(Calendar.DST_OFFSET) == 0 ? 0 : 2;
-                if (count < 4) {
-                    buffer.append(zone[2 + daylight]);
-                } else {
-                    buffer.append(zone[1 + daylight]);
-                }
-            }
-        } else {
-            int offset = calendar.get(Calendar.ZONE_OFFSET)
-                    + calendar.get(Calendar.DST_OFFSET);
-            char sign = '+';
-            if (offset < 0) {
-                sign = '-';
-                offset = -offset;
-            }
-            buffer.append(sign);
-            appendNumber(buffer, 2, offset / 3600000);
-            appendNumber(buffer, 2, (offset % 3600000) / 60000);
+    private void appendDayOfWeek(StringBuffer buffer, int count, String[] longs, String[] shorts) {
+        boolean isLong = (count > 3);
+        String[] days = isLong ? longs : shorts;
+        buffer.append(days[calendar.get(Calendar.DAY_OF_WEEK)]);
+    }
+
+    private void appendMonth(StringBuffer buffer, int count, String[] longs, String[] shorts) {
+        int month = calendar.get(Calendar.MONTH);
+        if (count <= 2) {
+            appendNumber(buffer, count, month + 1);
+            return;
         }
+
+        boolean isLong = (count > 3);
+        String[] months = isLong ? longs : shorts;
+        buffer.append(months[month]);
+    }
+
+    /**
+     * Append a representation of the time zone of 'calendar' to 'buffer'.
+     *
+     * @param count the number of z or Z characters in the format string; "zzz" would be 3,
+     * for example.
+     * @param generalTimeZone true if we should use a display name ("PDT") if available;
+     * false implies that we should use RFC 822 format ("-0800") instead. This corresponds to 'z'
+     * versus 'Z' in the format string.
+     */
+    private void appendTimeZone(StringBuffer buffer, int count, boolean generalTimeZone) {
+        if (generalTimeZone) {
+            TimeZone tz = calendar.getTimeZone();
+            boolean daylight = (calendar.get(Calendar.DST_OFFSET) != 0);
+            int style = count < 4 ? TimeZone.SHORT : TimeZone.LONG;
+            if (!formatData.customZoneStrings) {
+                buffer.append(tz.getDisplayName(daylight, style, formatData.locale));
+                return;
+            }
+            // We can't call TimeZone.getDisplayName() because it would not use
+            // the custom DateFormatSymbols of this SimpleDateFormat.
+            String custom = TimeZones.getDisplayName(formatData.zoneStrings, tz.getID(), daylight, style);
+            if (custom != null) {
+                buffer.append(custom);
+                return;
+            }
+        }
+        // We didn't find what we were looking for, so default to a numeric time zone.
+        appendNumericTimeZone(buffer, generalTimeZone);
+    }
+
+    /**
+     * @param generalTimeZone "GMT-08:00" rather than "-0800".
+     */
+    private void appendNumericTimeZone(StringBuffer buffer, boolean generalTimeZone) {
+        int offset = calendar.get(Calendar.ZONE_OFFSET) + calendar.get(Calendar.DST_OFFSET);
+        char sign = '+';
+        if (offset < 0) {
+            sign = '-';
+            offset = -offset;
+        }
+        if (generalTimeZone) {
+            buffer.append("GMT");
+        }
+        buffer.append(sign);
+        appendNumber(buffer, 2, offset / 3600000);
+        if (generalTimeZone) {
+            buffer.append(':');
+        }
+        appendNumber(buffer, 2, (offset % 3600000) / 60000);
     }
 
     private void appendNumber(StringBuffer buffer, int count, int value) {
+        // TODO: we could avoid using the NumberFormat in most cases for a significant speedup.
+        // The only problem is that we expose the NumberFormat to third-party code, so we'd have
+        // some work to do to work out when the optimization is valid.
         int minimumIntegerDigits = numberFormat.getMinimumIntegerDigits();
         numberFormat.setMinimumIntegerDigits(count);
-        numberFormat.format(new Integer(value), buffer, new FieldPosition(0));
+        numberFormat.format(Integer.valueOf(value), buffer, new FieldPosition(0));
         numberFormat.setMinimumIntegerDigits(minimumIntegerDigits);
     }
-    
+
+    private Date error(ParsePosition position, int offset, TimeZone zone) {
+        position.setErrorIndex(offset);
+        calendar.setTimeZone(zone);
+        return null;
+    }
 
     /**
      * Formats the specified date as a string using the pattern of this date
@@ -950,90 +816,17 @@ public class SimpleDateFormat extends DateFormat {
      *             if there are invalid characters in the pattern.
      */
     @Override
-    public StringBuffer format(Date date, StringBuffer buffer,
-            FieldPosition fieldPos) {
-        String id = calendar.getTimeZone().getID();
-        if (!tzId.equals(id)) {
-            tzId = id;
-            icuFormat.setTimeZone(com.ibm.icu.util.TimeZone.getTimeZone(tzId));
-        }
-        // As ICU has its own implementation for DateFormat.Field, we need to
-        // pass an ICU instance of DateFormat.Field to the FieldPosition to get
-        // the begin and end index.
-        StringBuffer result = null;
-        Format.Field attribute = fieldPos.getFieldAttribute();
-        if (attribute instanceof DateFormat.Field) {
-            com.ibm.icu.text.DateFormat.Field icuAttribute = toICUField((DateFormat.Field) attribute);
-            int field = fieldPos.getField();
-            FieldPosition icuFieldPos = new FieldPosition(icuAttribute, field);
-            result = icuFormat.format(date, buffer, icuFieldPos);
-            fieldPos.setBeginIndex(icuFieldPos.getBeginIndex());
-            fieldPos.setEndIndex(icuFieldPos.getEndIndex());
-            return result;
-        }
-        return icuFormat.format(date, buffer, fieldPos);
+    public StringBuffer format(Date date, StringBuffer buffer, FieldPosition fieldPos) {
+        // Harmony delegates to ICU's SimpleDateFormat, we implement it directly
+        return formatImpl(date, buffer, fieldPos, null);
     }
 
     /**
-     * Maps the Java-spec date format field to the equivalent field in ICU.
-     * 
-     * @param attribute
-     *            the Java-spec definition of a date format field.
-     * @return the ICU definition of the same date format field.
-     */
-    private com.ibm.icu.text.DateFormat.Field toICUField(
-            DateFormat.Field attribute) {
-        com.ibm.icu.text.DateFormat.Field icuAttribute = null;
-
-        if (attribute == DateFormat.Field.ERA) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.ERA;
-        } else if (attribute == DateFormat.Field.YEAR) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.YEAR;
-        } else if (attribute == DateFormat.Field.MONTH) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.MONTH;
-        } else if (attribute == DateFormat.Field.HOUR_OF_DAY0) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.HOUR_OF_DAY0;
-        } else if (attribute == DateFormat.Field.HOUR_OF_DAY1) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.HOUR_OF_DAY1;
-        } else if (attribute == DateFormat.Field.MINUTE) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.MINUTE;
-        } else if (attribute == DateFormat.Field.SECOND) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.SECOND;
-        } else if (attribute == DateFormat.Field.MILLISECOND) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.MILLISECOND;
-        } else if (attribute == DateFormat.Field.DAY_OF_WEEK) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.DAY_OF_WEEK;
-        } else if (attribute == DateFormat.Field.DAY_OF_MONTH) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.DAY_OF_MONTH;
-        } else if (attribute == DateFormat.Field.DAY_OF_YEAR) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.DAY_OF_YEAR;
-        } else if (attribute == DateFormat.Field.DAY_OF_WEEK_IN_MONTH) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.DAY_OF_WEEK_IN_MONTH;
-        } else if (attribute == DateFormat.Field.WEEK_OF_YEAR) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.WEEK_OF_YEAR;
-        } else if (attribute == DateFormat.Field.WEEK_OF_MONTH) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.WEEK_OF_MONTH;
-        } else if (attribute == DateFormat.Field.AM_PM) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.AM_PM;
-        } else if (attribute == DateFormat.Field.HOUR0) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.HOUR0;
-        } else if (attribute == DateFormat.Field.HOUR1) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.HOUR1;
-        } else if (attribute == DateFormat.Field.TIME_ZONE) {
-            icuAttribute = com.ibm.icu.text.DateFormat.Field.TIME_ZONE;
-        }
-
-        return icuAttribute;
-    }
-
-    /**
-     * Answers the Date which is the start of the one hundred year period for
-     * two digits year values.
-     * 
-     * @return a Date
+     * Returns the date which is the start of the one hundred year period for two-digit year values.
+     * See {@link #set2DigitYearStart} for details.
      */
     public Date get2DigitYearStart() {
-        return defaultCenturyStart;
+        return (Date) defaultCenturyStart.clone();
     }
 
     /**
@@ -1042,14 +835,144 @@ public class SimpleDateFormat extends DateFormat {
      * @return the {@code DateFormatSymbols} object.
      */
     public DateFormatSymbols getDateFormatSymbols() {
-        // Return a clone so the arrays in the ResourceBundle are not modified
         return (DateFormatSymbols) formatData.clone();
     }
 
     @Override
     public int hashCode() {
-        return super.hashCode() + pattern.hashCode() + formatData.hashCode()
-                + creationYear;
+        return super.hashCode() + pattern.hashCode() + formatData.hashCode() + creationYear;
+    }
+
+    private int parse(String string, int offset, char format, int count) {
+        int index = PATTERN_CHARS.indexOf(format);
+        if (index == -1) {
+            throw new IllegalArgumentException("Unknown pattern character '" + format + "'");
+        }
+        int field = -1;
+        // TODO: what's 'absolute' for? when is 'count' negative, and why?
+        int absolute = 0;
+        if (count < 0) {
+            count = -count;
+            absolute = count;
+        }
+        switch (index) {
+            case ERA_FIELD:
+                return parseText(string, offset, formatData.eras, Calendar.ERA);
+            case YEAR_FIELD:
+                if (count >= 3) {
+                    field = Calendar.YEAR;
+                } else {
+                    ParsePosition position = new ParsePosition(offset);
+                    Number result = parseNumber(absolute, string, position);
+                    if (result == null) {
+                        return -position.getErrorIndex() - 1;
+                    }
+                    int year = result.intValue();
+                    // A two digit year must be exactly two digits, i.e. 01
+                    if ((position.getIndex() - offset) == 2 && year >= 0) {
+                        year += creationYear / 100 * 100;
+                        if (year < creationYear) {
+                            year += 100;
+                        }
+                    }
+                    calendar.set(Calendar.YEAR, year);
+                    return position.getIndex();
+                }
+                break;
+            case STAND_ALONE_MONTH_FIELD: // L
+                return parseMonth(string, offset, count, absolute,
+                        formatData.longStandAloneMonths, formatData.shortStandAloneMonths);
+            case MONTH_FIELD: // M
+                return parseMonth(string, offset, count, absolute,
+                        formatData.months, formatData.shortMonths);
+            case DATE_FIELD:
+                field = Calendar.DATE;
+                break;
+            case HOUR_OF_DAY1_FIELD: // k
+                ParsePosition position = new ParsePosition(offset);
+                Number result = parseNumber(absolute, string, position);
+                if (result == null) {
+                    return -position.getErrorIndex() - 1;
+                }
+                int hour = result.intValue();
+                if (hour == 24) {
+                    hour = 0;
+                }
+                calendar.set(Calendar.HOUR_OF_DAY, hour);
+                return position.getIndex();
+            case HOUR_OF_DAY0_FIELD: // H
+                field = Calendar.HOUR_OF_DAY;
+                break;
+            case MINUTE_FIELD:
+                field = Calendar.MINUTE;
+                break;
+            case SECOND_FIELD:
+                field = Calendar.SECOND;
+                break;
+            case MILLISECOND_FIELD:
+                field = Calendar.MILLISECOND;
+                break;
+            case STAND_ALONE_DAY_OF_WEEK_FIELD:
+                return parseDayOfWeek(string, offset, formatData.longStandAloneWeekdays, formatData.shortStandAloneWeekdays);
+            case DAY_OF_WEEK_FIELD:
+                return parseDayOfWeek(string, offset, formatData.weekdays, formatData.shortWeekdays);
+            case DAY_OF_YEAR_FIELD:
+                field = Calendar.DAY_OF_YEAR;
+                break;
+            case DAY_OF_WEEK_IN_MONTH_FIELD:
+                field = Calendar.DAY_OF_WEEK_IN_MONTH;
+                break;
+            case WEEK_OF_YEAR_FIELD:
+                field = Calendar.WEEK_OF_YEAR;
+                break;
+            case WEEK_OF_MONTH_FIELD:
+                field = Calendar.WEEK_OF_MONTH;
+                break;
+            case AM_PM_FIELD:
+                return parseText(string, offset, formatData.ampms, Calendar.AM_PM);
+            case HOUR1_FIELD: // h
+                position = new ParsePosition(offset);
+                result = parseNumber(absolute, string, position);
+                if (result == null) {
+                    return -position.getErrorIndex() - 1;
+                }
+                hour = result.intValue();
+                if (hour == 12) {
+                    hour = 0;
+                }
+                calendar.set(Calendar.HOUR, hour);
+                return position.getIndex();
+            case HOUR0_FIELD: // K
+                field = Calendar.HOUR;
+                break;
+            case TIMEZONE_FIELD: // z
+                return parseTimeZone(string, offset);
+            case RFC_822_TIMEZONE_FIELD: // Z
+                return parseTimeZone(string, offset);
+        }
+        if (field != -1) {
+            return parseNumber(absolute, string, offset, field, 0);
+        }
+        return offset;
+    }
+
+    private int parseDayOfWeek(String string, int offset, String[] longs, String[] shorts) {
+        int index = parseText(string, offset, longs, Calendar.DAY_OF_WEEK);
+        if (index < 0) {
+            index = parseText(string, offset, shorts, Calendar.DAY_OF_WEEK);
+        }
+        return index;
+    }
+
+    private int parseMonth(String string, int offset, int count, int absolute, String[] longs, String[] shorts) {
+        if (count <= 2) {
+            return parseNumber(absolute, string, offset, Calendar.MONTH, -1);
+        }
+        int index = parseText(string, offset, longs, Calendar.MONTH);
+        if (index < 0) {
+            index = parseText(string, offset, shorts, Calendar.MONTH);
+        }
+        return index;
     }
 
     /**
@@ -1075,57 +998,279 @@ public class SimpleDateFormat extends DateFormat {
      */
     @Override
     public Date parse(String string, ParsePosition position) {
-        String id = calendar.getTimeZone().getID();
-        if (!tzId.equals(id)) {
-            tzId = id;
-            icuFormat.setTimeZone(com.ibm.icu.util.TimeZone.getTimeZone(tzId));
+        // Harmony delegates to ICU's SimpleDateFormat, we implement it directly
+        boolean quote = false;
+        int next, last = -1, count = 0, offset = position.getIndex();
+        int length = string.length();
+        calendar.clear();
+        TimeZone zone = calendar.getTimeZone();
+        final int patternLength = pattern.length();
+        for (int i = 0; i < patternLength; i++) {
+            next = pattern.charAt(i);
+            if (next == '\'') {
+                if (count > 0) {
+                    if ((offset = parse(string, offset, (char) last, count)) < 0) {
+                        return error(position, -offset - 1, zone);
+                    }
+                    count = 0;
+                }
+                if (last == next) {
+                    if (offset >= length || string.charAt(offset) != '\'') {
+                        return error(position, offset, zone);
+                    }
+                    offset++;
+                    last = -1;
+                } else {
+                    last = next;
+                }
+                quote = !quote;
+                continue;
+            }
+            if (!quote
+                    && (last == next || (next >= 'a' && next <= 'z') || (next >= 'A' && next <= 'Z'))) {
+                if (last == next) {
+                    count++;
+                } else {
+                    if (count > 0) {
+                        if ((offset = parse(string, offset, (char) last, -count)) < 0) {
+                            return error(position, -offset - 1, zone);
+                        }
+                    }
+                    last = next;
+                    count = 1;
+                }
+            } else {
+                if (count > 0) {
+                    if ((offset = parse(string, offset, (char) last, count)) < 0) {
+                        return error(position, -offset - 1, zone);
+                    }
+                    count = 0;
+                }
+                last = -1;
+                if (offset >= length || string.charAt(offset) != next) {
+                    return error(position, offset, zone);
+                }
+                offset++;
+            }
         }
-        icuFormat.setLenient(calendar.isLenient());
-        return icuFormat.parse(string,position);
+        if (count > 0) {
+            if ((offset = parse(string, offset, (char) last, count)) < 0) {
+                return error(position, -offset - 1, zone);
+            }
+        }
+        Date date;
+        try {
+            date = calendar.getTime();
+        } catch (IllegalArgumentException e) {
+            return error(position, offset, zone);
+        }
+        position.setIndex(offset);
+        calendar.setTimeZone(zone);
+        return date;
+    }
+
+    private Number parseNumber(int max, String string, ParsePosition position) {
+        int digit, length = string.length(), result = 0;
+        int index = position.getIndex();
+        if (max > 0 && max < length - index) {
+            length = index + max;
+        }
+        while (index < length
+                && (string.charAt(index) == ' ' || string.charAt(index) == '\t')) {
+            index++;
+        }
+        if (max == 0) {
+            position.setIndex(index);
+            return numberFormat.parse(string, position);
+        }
+
+        while (index < length
+                && (digit = Character.digit(string.charAt(index), 10)) != -1) {
+            index++;
+            result = result * 10 + digit;
+        }
+        if (index == position.getIndex()) {
+            position.setErrorIndex(index);
+            return null;
+        }
+        position.setIndex(index);
+        return Integer.valueOf(result);
+    }
+
+    private int parseNumber(int max, String string, int offset, int field, int skew) {
+        ParsePosition position = new ParsePosition(offset);
+        Number result = parseNumber(max, string, position);
+        if (result == null) {
+            return -position.getErrorIndex() - 1;
+        }
+        calendar.set(field, result.intValue() + skew);
+        return position.getIndex();
+    }
+
+    private int parseText(String string, int offset, String[] text, int field) {
+        int found = -1;
+        for (int i = 0; i < text.length; i++) {
+            if (text[i].isEmpty()) {
+                continue;
+            }
+            if (string.regionMatches(true, offset, text[i], 0, text[i].length())) {
+                // Search for the longest match, in case some fields are subsets
+                if (found == -1 || text[i].length() > text[found].length()) {
+                    found = i;
+                }
+            }
+        }
+        if (found != -1) {
+            calendar.set(field, found);
+            return offset + text[found].length();
+        }
+        return -offset - 1;
+    }
+
+    private int parseTimeZone(String string, int offset) {
+        boolean foundGMT = string.regionMatches(offset, "GMT", 0, 3);
+        if (foundGMT) {
+            offset += 3;
+        }
+        char sign;
+        if (offset < string.length()
+                && ((sign = string.charAt(offset)) == '+' || sign == '-')) {
+            ParsePosition position = new ParsePosition(offset + 1);
+            Number result = numberFormat.parse(string, position);
+            if (result == null) {
+                return -position.getErrorIndex() - 1;
+            }
+            int hour = result.intValue();
+            int raw = hour * 3600000;
+            int index = position.getIndex();
+            if (index < string.length() && string.charAt(index) == ':') {
+                position.setIndex(index + 1);
+                result = numberFormat.parse(string, position);
+                if (result == null) {
+                    return -position.getErrorIndex() - 1;
+                }
+                int minute = result.intValue();
+                raw += minute * 60000;
+            } else if (hour >= 24) {
+                raw = (hour / 100 * 3600000) + (hour % 100 * 60000);
+            }
+            if (sign == '-') {
+                raw = -raw;
+            }
+            calendar.setTimeZone(new SimpleTimeZone(raw, ""));
+            return position.getIndex();
+        }
+        if (foundGMT) {
+            calendar.setTimeZone(TimeZone.getTimeZone("GMT"));
+            return offset;
+        }
+        String[][] zones = formatData.internalZoneStrings();
+        for (String[] element : zones) {
+            for (int j = TimeZones.LONG_NAME; j < TimeZones.NAME_COUNT; j++) {
+                if (string.regionMatches(true, offset, element[j], 0, element[j].length())) {
+                    TimeZone zone = TimeZone.getTimeZone(element[TimeZones.OLSON_NAME]);
+                    if (zone == null) {
+                        return -offset - 1;
+                    }
+                    int raw = zone.getRawOffset();
+                    if (j == TimeZones.LONG_NAME_DST || j == TimeZones.SHORT_NAME_DST) {
+                        /*
+                         * TODO, http://b/4723412
+                         * We can't use TimeZone#getDSTSavings here because that
+                         * will return 0 if the zone no longer uses DST. We
+                         * should change this to use TimeZone.getOffset(long),
+                         * which requires the complete date to be parsed first.
+                         */
+                        raw += 3600000;
+                    }
+                    calendar.setTimeZone(new SimpleTimeZone(raw, ""));
+                    return offset + element[j].length();
+                }
+            }
+        }
+        return -offset - 1;
     }
 
     /**
-     * Sets the date which is the start of the one hundred year period for two
-     * digits year values.
-     * 
-     * @param date
-     *            the new date.
+     * Sets the date which is the start of the one hundred year period for two-digit year values.
+     *
+     * <p>When parsing a date string using the abbreviated year pattern {@code yy}, {@code
+     * SimpleDateFormat} must interpret the abbreviated year relative to some
+     * century. It does this by adjusting dates to be within 80 years before and 20
+     * years after the time the {@code SimpleDateFormat} instance was created. For
+     * example, using a pattern of {@code MM/dd/yy}, an
+     * instance created on Jan 1, 1997 would interpret the string {@code "01/11/12"}
+     * as Jan 11, 2012 but interpret the string {@code "05/04/64"} as May 4, 1964.
+     * During parsing, only strings consisting of exactly two digits, as
+     * defined by {@link java.lang.Character#isDigit(char)}, will be parsed into the
+     * default century. Any other numeric string, such as a one digit string, a
+     * three or more digit string, or a two digit string that isn't all digits (for
+     * example, {@code "-1"}), is interpreted literally. So using the same pattern, both
+     * {@code "01/02/3"} and {@code "01/02/003"} are parsed as Jan 2, 3 AD.
+     * Similarly, {@code "01/02/-3"} is parsed as Jan 2, 4 BC.
+     *
+     * <p>If the year pattern does not have exactly two 'y' characters, the year is
+     * interpreted literally, regardless of the number of digits. So using the
+     * pattern {@code MM/dd/yyyy}, {@code "01/11/12"} is parsed as Jan 11, 12 A.D.
      */
     public void set2DigitYearStart(Date date) {
-        icuFormat.set2DigitYearStart(date);
-        defaultCenturyStart = date;
+        defaultCenturyStart = (Date) date.clone();
         Calendar cal = new GregorianCalendar();
-        cal.setTime(date);
+        cal.setTime(defaultCenturyStart);
         creationYear = cal.get(Calendar.YEAR);
     }
 
     /**
      * Sets the {@code DateFormatSymbols} used by this simple date format.
-     * 
+     *
      * @param value
      *            the new {@code DateFormatSymbols} object.
      */
     public void setDateFormatSymbols(DateFormatSymbols value) {
-        com.ibm.icu.text.DateFormatSymbols icuSymbols = new com.ibm.icu.text.DateFormatSymbols();
-        copySymbols(value, icuSymbols);
-        icuFormat.setDateFormatSymbols(icuSymbols);
         formatData = (DateFormatSymbols) value.clone();
     }
 
     /**
      * Returns the pattern of this simple date format using localized pattern
      * characters.
-     * 
+     *
      * @return the localized pattern.
      */
     public String toLocalizedPattern() {
-        return icuFormat.toLocalizedPattern();
+        return convertPattern(pattern, PATTERN_CHARS, formatData.getLocalPatternChars(), false);
+    }
+
+    private static String convertPattern(String template, String fromChars, String toChars, boolean check) {
+        if (!check && fromChars.equals(toChars)) {
+            return template;
+        }
+        boolean quote = false;
+        StringBuilder output = new StringBuilder();
+        int length = template.length();
+        for (int i = 0; i < length; i++) {
+            int index;
+            char next = template.charAt(i);
+            if (next == '\'') {
+                quote = !quote;
+            }
+            if (!quote && (index = fromChars.indexOf(next)) != -1) {
+                output.append(toChars.charAt(index));
+            } else if (check && !quote && ((next >= 'a' && next <= 'z') || (next >= 'A' && next <= 'Z'))) {
+                throw new IllegalArgumentException("Invalid pattern character '" + next + "' in " + "'" + template + "'");
+            } else {
+                output.append(next);
+            }
+        }
+        if (quote) {
+            throw new IllegalArgumentException("Unterminated quote");
+        }
+        return output.toString();
     }
 
     /**
      * Returns the pattern of this simple date format using non-localized
      * pattern characters.
-     * 
+     *
      * @return the non-localized pattern.
      */
     public String toPattern() {
@@ -1133,32 +1278,32 @@ public class SimpleDateFormat extends DateFormat {
     }
 
     private static final ObjectStreamField[] serialPersistentFields = {
-            new ObjectStreamField("defaultCenturyStart", Date.class), //$NON-NLS-1$
-            new ObjectStreamField("formatData", DateFormatSymbols.class), //$NON-NLS-1$
-            new ObjectStreamField("pattern", String.class), //$NON-NLS-1$
-            new ObjectStreamField("serialVersionOnStream", Integer.TYPE), }; //$NON-NLS-1$
+        new ObjectStreamField("defaultCenturyStart", Date.class),
+        new ObjectStreamField("formatData", DateFormatSymbols.class),
+        new ObjectStreamField("pattern", String.class),
+        new ObjectStreamField("serialVersionOnStream", int.class),
+    };
 
     private void writeObject(ObjectOutputStream stream) throws IOException {
         ObjectOutputStream.PutField fields = stream.putFields();
-        fields.put("defaultCenturyStart", defaultCenturyStart); //$NON-NLS-1$
-        fields.put("formatData", formatData); //$NON-NLS-1$
-        fields.put("pattern", pattern); //$NON-NLS-1$
-        fields.put("serialVersionOnStream", 1); //$NON-NLS-1$
+        fields.put("defaultCenturyStart", defaultCenturyStart);
+        fields.put("formatData", formatData);
+        fields.put("pattern", pattern);
+        fields.put("serialVersionOnStream", 1);
         stream.writeFields();
     }
 
-    private void readObject(ObjectInputStream stream) throws IOException,
-            ClassNotFoundException {
+    private void readObject(ObjectInputStream stream) throws IOException, ClassNotFoundException {
         ObjectInputStream.GetField fields = stream.readFields();
-        int version = fields.get("serialVersionOnStream", 0); //$NON-NLS-1$
+        int version = fields.get("serialVersionOnStream", 0);
         Date date;
         if (version > 0) {
-            date = (Date) fields.get("defaultCenturyStart", new Date()); //$NON-NLS-1$
+            date = (Date) fields.get("defaultCenturyStart", new Date());
         } else {
             date = new Date();
         }
         set2DigitYearStart(date);
-        formatData = (DateFormatSymbols) fields.get("formatData", null); //$NON-NLS-1$
-        pattern = (String) fields.get("pattern", ""); //$NON-NLS-1$ //$NON-NLS-2$
+        formatData = (DateFormatSymbols) fields.get("formatData", null);
+        pattern = (String) fields.get("pattern", "");
     }
 }
